2008-08-26 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b14

 * Fix: Removing album permission broken.

 * Change: Update Walter Zorns
		wz_tooltip.js to 5.20
		tip_balloon.js to 1.6

 * Fix: Line endings in wz_jsgraphics.js

 * Fix: Imagemaps were shown at wrong position due to bad

2008-08-25 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b13

 * Fix: FitToWindow in classic_sidebar.

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b12

 * Change: New Icon for crop image, the previous was to confusing.

 * Change: Used yuicompressor to minimize prototype.js
           Added original file in src folder.

 * Fix: FitToWindow broken.

 * Change: Moved various Javascripts to the bottom of pages
           as suggested by yahoo to speedup rendering.

 * Fix: Added selectbox captin in view photo, when no icons are wanted.

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b11

 * Change: VERY nicified buttons in standard skin. sweeet ;-)

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b10

 * Fix: Lightbox effect crashed thumbsview when
        subalbums without an highlight (e.g. new) are present.

 * Fix: Added missing javascript for password strengthmeter.

 * Fix: Typo that broke add photo popup.

 * Fix: Changing lightbox effects was not done recursively.

        Thanks to Peter Schumacher.

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b9

 * Fix: HTML_Safe removes 0 from a string,
        so check for 0 in getRequestVar()

 * Fix: Typo in getDimensions that could make problems
        when using Netpbm.

 * Removed: function getCVSVersion as we use SVN ;-)

 * Change: Increased debuglevel for array_sort_by_fields to 4

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b8

 * FIX: Reworked new_password.php

 * Change: Reworked poll_results.php

 * Change: Added check for correct comment Index when getting a comment.

 * Change: CSS updates.

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b7

 * Fix: Copying a photo from a subalbum into the same album did not work.
